--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -13,20 +13,20 @@
 
 :focus,
 :active {
-	/*outline: none;*/
+	outline: none;
 }
 
 a:focus,
 a:active {
-	/* outline: none;*/
+	outline: none;
 }
 
 /* Links */
 
 a, a:link, a:visited  {
-    /* color: inherit; */
+    color: inherit;
     text-decoration: none;
-    /* display: inline-block; */
+    display: inline-block;
 }
 
 a:hover  {
